[gd_scene load_steps=7 format=3 uid="uid://po6qul23l7q2"]

[ext_resource type="Script" path="res://scripts/editor/select_menu_manager.gd" id="1_kst68"]
[ext_resource type="Script" path="res://scripts/editor/level_editor.gd" id="1_nbeij"]
[ext_resource type="Script" path="res://scripts/editor/map_area_manager.gd" id="2_r4wt1"]
[ext_resource type="PackedScene" uid="uid://b8mdg5yxjsbub" path="res://scenes/mouse_tracker.tscn" id="4_osxih"]
[ext_resource type="Texture2D" uid="uid://ssk13on0bvpp" path="res://sprites/editor/editor_menu_button.png" id="4_sscbb"]
[ext_resource type="Script" path="res://scripts/grid_drawer.gd" id="5_4t7wh"]

[node name="LevelEditor" type="Node2D"]
script = ExtResource("1_nbeij")

[node name="GridDrawer" type="Node2D" parent="."]
script = ExtResource("5_4t7wh")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="MapAreaManager" type="Node2D" parent="."]
script = ExtResource("2_r4wt1")

[node name="SelectMenuManager" type="ColorRect" parent="."]
script = ExtResource("1_kst68")

[node name="RunButton" type="TextureButton" parent="SelectMenuManager"]
layout_mode = 0
offset_right = 100.0
offset_bottom = 42.0
texture_normal = ExtResource("4_sscbb")

[node name="SaveButton" type="TextureButton" parent="SelectMenuManager"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture_normal = ExtResource("4_sscbb")

[node name="ImportButton" type="TextureButton" parent="SelectMenuManager"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture_normal = ExtResource("4_sscbb")

[node name="ExportButton" type="TextureButton" parent="SelectMenuManager"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture_normal = ExtResource("4_sscbb")

[node name="MouseTracker" parent="." instance=ExtResource("4_osxih")]

[node name="ImportFileDialog" type="FileDialog" parent="."]
title = "Open a File"
ok_button_text = "Open"
dialog_hide_on_ok = true
dialog_close_on_escape = false
file_mode = 0
access = 2
filters = PackedStringArray("*.tsv")
use_native_dialog = true

[node name="ExportFileDialog" type="FileDialog" parent="."]
auto_translate_mode = 1
size = Vector2i(215, 175)
ok_button_text = "Save"
dialog_hide_on_ok = true
dialog_close_on_escape = false
access = 2
filters = PackedStringArray("*.tsv")
use_native_dialog = true

[connection signal="pressed" from="SelectMenuManager/RunButton" to="." method="_on_run_button_pressed"]
[connection signal="pressed" from="SelectMenuManager/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="SelectMenuManager/ImportButton" to="." method="_on_import_button_pressed"]
[connection signal="pressed" from="SelectMenuManager/ExportButton" to="." method="_on_export_button_pressed"]
